# FlaskApiS3

./: .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile_CD  README.md
aws/: AppTemplate.yaml
project/: Makefile  pyproject.toml
project/restapi/: __init__.py  api.py  bucket.py  views.py
project/restapi/templates/: files.html
project/src/restapi/: __init__.py  api.py  filters.py  resources.py  views.py
project/src/restapi/templates/: layout.html  storage.html
project/tests/: test_restapi.py
